# aiml

./: README.md
server/: Makefile.am  libaiml.xml  main.cpp  tlib_log.cpp  tlib_log.h
src/: stuff.cpp  template_parser.cpp
test_app/: main.cpp
test_app/aiml/: Astrology.aiml  Money.aiml  Politics.aiml
